--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # exe
 verimqtt
 
+# C
 # Prerequisites
 *.d
 
@@ -53,3 +54,37 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# C++
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
