--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -63,7 +63,7 @@ add_executable(MQTTParsePacket
     ClassPath/src/bstrlib.c)
 
 
-set(THREADS_PREFER_PTHREAD_FLAG ON)
+# set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 set_target_properties(MQTTc PROPERTIES
@@ -80,14 +80,14 @@ set_target_properties(MQTTParsePacket PROPERTIES
 
 include_directories(ClassPath/include/)
 
-target_compile_definitions(MQTTc PUBLIC _DEBUG=$<CONFIG:Debug> 
-                                        MinimalFootPrint=$<STREQUAL:${REDUCED_FOOTPRINT},ON> 
-                                        $<$<PLATFORM_ID:Linux>:_LINUX=1> 
-                                        MQTTOnlyBSDSocket=$<STREQUAL:${CROSSPLATFORM_SOCKET},OFF> 
-                                        MQTTUseTLS=$<AND:$<STREQUAL:${CROSSPLATFORM_SOCKET},OFF>,$<STREQUAL:${ENABLE_TLS},ON>>)
+# target_compile_definitions(MQTTc PUBLIC _DEBUG=$<CONFIG:Debug> 
+#                                         MinimalFootPrint=$<STREQUAL:${REDUCED_FOOTPRINT},ON> 
+#                                         $<$<PLATFORM_ID:Linux>:_LINUX=1> 
+#                                         MQTTOnlyBSDSocket=$<STREQUAL:${CROSSPLATFORM_SOCKET},OFF> 
+#                                         MQTTUseTLS=$<AND:$<STREQUAL:${CROSSPLATFORM_SOCKET},OFF>,$<STREQUAL:${ENABLE_TLS},ON>>)
 
-target_compile_definitions(MQTTParsePacket PUBLIC _DEBUG=$<CONFIG:Debug> 
-                                        $<$<PLATFORM_ID:Linux>:_LINUX=1>)
+# target_compile_definitions(MQTTParsePacket PUBLIC _DEBUG=$<CONFIG:Debug> 
+#                                         $<$<PLATFORM_ID:Linux>:_LINUX=1>)
 
 
 IF(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
