--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -111,6 +111,6 @@ ENDIF()
 
 target_link_libraries(MQTTc LINK_PUBLIC eMQTT5 ${CMAKE_DL_LIBS} Threads::Threads)
 install(TARGETS MQTTc RUNTIME DESTINATION bin)
-target_link_libraries(MQTTParsePacket LINK_PUBLIC eMQTT5 ${CMAKE_DL_LIBS} Threads::Threads)
+target_link_libraries(MQTTParsePacket LINK_PUBLIC eMQTT5 fmt::fmt ${CMAKE_DL_LIBS} Threads::Threads)
 install(TARGETS MQTTParsePacket RUNTIME DESTINATION bin)
 
